examples/test/testpolicy13306.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13306
  namespace: namespace275
spec:
  podSelector:
    matchLabels:
      key11: value13
      key28: value38
      key32: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value17
          key37: value19
          key42: value39
      podSelector:
        matchLabels:
          key22: value33
          key18: value30
          key46: value7
